<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/permission_iv"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        app:srcCompat="@drawable/ic_round_camera"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/permission_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lora_regular"
        android:textColor="@color/black"
        android:text="@string/permission_camera"
        android:textSize="@dimen/sp_16"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@+id/permission_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permission_positive_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_app_settings"
        style="@style/Theme.HealthAssistant.PrimaryButtonTheme"
        android:layout_marginVertical="@dimen/dp_24"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@+id/permission_description_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permission_negative_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_not_now"
        style="@style/Theme.HealthAssistant.NegativeButtonTheme"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@+id/permission_positive_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>